resolved issues with footer and unexpected margin/padding. Hyperlinks are legible and change color, JS for time of day greeting functional.

--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,6 @@
 .container {
     animation: transitionIn 2s;
+    padding-bottom: 500px;
 }
 
 @keyframes transitionIn {
